--- a/layout.css
+++ b/layout.css
@@ -134,11 +134,63 @@ nav>a:hover {
     box-shadow: var(--subtle-shadow);
 }
 
+.formulario {
+    background-color: #ffcd3c;
+    padding: 40px;
+    margin-top: 20px;
+    border-radius: 0.5em;
+}
+
+.box {
+    display: flex;
+    padding-left: 450px;
+    padding-top: 100px;
+}
+
+.row {
+    display: block;
+    padding: 2%;
+    width: 300px;
+    border: none;
+    border-radius: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.ref {
+    display: block;
+    border: none;
+    margin-bottom: 2%;
+    padding: 2%;
+    width: 300px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.boton {
+    display: block;
+    border: none;
+    margin-bottom: 2%;
+    padding: 2%;
+    width: 300px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 15px;
+    background-color: blue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.boton:hover {
+    background-color: cyan;
+}
+
 
 /* FOOTER */
 
 footer {
-    padding: 20px;
+    padding: 15px;
     text-align: left;
     background: #35d0ba;
     margin-top: 20px;
@@ -153,6 +205,9 @@ footer {
         flex-direction: column;
     }
     .rightcolumn {
+        padding-left: 0;
+    }
+    .box {
         padding-left: 0;
     }
 }
