--- a/layout.css
+++ b/layout.css
@@ -135,36 +135,39 @@ nav>a:hover {
 }
 
 .formulario {
-    background-color: #ffcd3c;
-    padding: 40px;
+    background-color: rgb(255, 255, 255);
+    padding: 30px;
     margin-top: 20px;
     border-radius: 0.5em;
+    box-shadow: var(--subtle-shadow);
 }
 
 .box {
+    padding: 70px;
     display: flex;
-    padding-left: 450px;
-    padding-top: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 .row {
     display: block;
     padding: 2%;
-    width: 300px;
-    border: none;
-    border-radius: 15px;
+    width: 350px;
+    border-color: rgb(133, 131, 131);
+    border-radius: 7px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ref {
     display: block;
     border: none;
-    margin-bottom: 2%;
-    padding: 2%;
-    width: 300px;
+    padding: 5%;
+    width: 350px;
+    color: rgb(5, 79, 236);
     text-align: center;
     text-decoration: none;
-    font-weight: bold;
+    font-size: medium;
+    font-weight: initial;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -173,17 +176,18 @@ nav>a:hover {
     border: none;
     margin-bottom: 2%;
     padding: 2%;
-    width: 300px;
+    width: 350px;
+    font-size: medium;
     text-align: center;
     text-decoration: none;
-    font-weight: bold;
-    border-radius: 15px;
-    background-color: blue;
+    border-radius: 7px;
+    color: #f1f1f1;
+    background-color: rgb(70, 25, 194);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .boton:hover {
-    background-color: cyan;
+    background-color: #aaa;
 }
 
 
@@ -218,5 +222,12 @@ footer {
     }
     .login-link {
         margin: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .box {
+        box-shadow: none;
+        border: none;
     }
 }
